Updated CSS color

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   float: left;
   padding: 5px;
   display: block;
-  background: #FFE4B5;
+  background: #F5DEB3;
   text-align: center;
 }
 
@@ -55,7 +55,7 @@ article {
 	padding-bottom:0px;
 	padding-top: 5px;
 	display: block;
-	background-color: #FFE4B5;
+	background-color: #F5DEB3;
 }
 
 h1 {
@@ -67,7 +67,7 @@ h4 {
 	padding: 10px;
 	padding-bottom: 0px;
 	display: block;
-	background-color: #FFE4B5;
+	background-color: #F5DEB3;
 }
 
 p {
